# paperlint

./: .pre-commit-hooks.yaml  setup.cfg
paperlint/: linter.py  main.py
