[metadata]
name = paperlint
description: Check for common mistakes in LaTeX source files of scientific papers.
version = 0.1.0
license = MIT
url = https://github.com/eringrant/paperlint

[options]
packages =
    paperlint

[options.entry_points]
console_scripts =
    paperlint = paperlint.main:main
